<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2020 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Pizza</string>
    <string name="order_pizza">Order Pizza</string>
    <string name="small_pizza">Small</string>
    <string name="medium_pizza">Medium</string>
    <string name="large_pizza">Large</string>
    <string name="choose_type">Choose Type</string>
    <string name="classic">Classic</string>
    <string name="margaritta">Margaritta</string>
    <string name="capriciossa">Capriciossa</string>
    <string name="kebab">Kebab</string>
    <string name="inferno">Inferno</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_pizza_order">New Pizza Order</string>
    <string name="order_details">Size: %1$s pizza \n Type: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <string name="type">type</string>
    <string name="size">size</string>
</resources>