<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for selecting a flavor -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FlavorFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.cupcake.model.OrderViewModel" />

        <variable
            name="flavorFragment"
            type="com.example.cupcake.FlavorFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <RadioGroup
                android:id="@+id/pizza_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/classic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold|italic"
                    android:text="@string/classic"
                    android:onClick="@{() -> viewModel.setType(@string/classic)}"
                    android:checked="@{viewModel.type.equals(@string/classic)}"/>

                <RadioButton
                    android:id="@+id/margaritta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold|italic"
                    android:text="@string/margaritta"
                    android:onClick="@{() -> viewModel.setType(@string/margaritta)}"
                    android:checked="@{viewModel.type.equals(@string/margaritta)}"/>

                <RadioButton
                    android:id="@+id/capriciossa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold|italic"
                    android:text="@string/capriciossa"
                    android:onClick="@{() -> viewModel.setType(@string/capriciossa)}"
                    android:checked="@{viewModel.type.equals(@string/capriciossa)}"/>

                <RadioButton
                    android:id="@+id/kebab"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold|italic"
                    android:layout_height="wrap_content"
                    android:text="@string/kebab"
                    android:onClick="@{() -> viewModel.setType(@string/kebab)}"
                    android:checked="@{viewModel.type.equals(@string/kebab)}"/>

                <RadioButton
                    android:id="@+id/inferno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold|italic"
                    android:text="@string/inferno"
                    android:onClick="@{() -> viewModel.setType(@string/inferno)}"
                    android:checked="@{viewModel.type.equals(@string/inferno)}"/>
            </RadioGroup>

            <View
                android:id="@+id/divider"
                android:background="@color/orange_light"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pizza_options" />

            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.Cupcake.TextView"
                android:textColor="@color/orange_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                android:textStyle="bold|italic"
                android:text="@{@string/subtotal_price(viewModel.price)}"
                tools:text="Subtotal $5.00" />

            <Button
                android:id="@+id/cancel_button"
                android:onClick="@{() -> flavorFragment.cancelOrder()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginEnd="@dimen/side_margin"
                app:strokeColor="@color/orange_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintTop_toTopOf="@id/next_button"
                style="?attr/materialButtonOutlinedStyle"/>

            <Button
                android:id="@+id/next_button"
                android:onClick="@{() -> flavorFragment.goToNextScreen()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/subtotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>